--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1023,18 +1023,183 @@ bool outqueue(lq &q,int &x){
 ### 数组实现二叉树
 
 ```c++
-//数组实现二叉树
+//数组实现二叉树(下标从1开始)
 
 //定义树结点
-
+struct treenode{
+	int data;
+    bool empty;
+};
 //初始化二叉树
-
+void init(treenode t[],int length){
+    for(int i = 0;i<length;i++)
+        t[i].empty=true;
+}
+int main(){
+    treenode t[100];
+    init(t,100);
+}
 //判空树结点
-
+bool isempty(treenode t[],int length,int x){
+    if(x>=length || x<1) return true;
+    return t[x].empty;
+}
 //找到结点的左孩子
-
+int findlkid(treenode t[],int length,int x){
+    int lkid = x*2;
+    if(isempty(t,length,lkid))return -1;
+    return lkid;
+    
+}
 //找到结点的右孩子
+int findrkid(treenode t[],int length,int x){
+    int rkid = x*2+1;
+    if(isempty(t,length,rkid))return -1;
+    return rkid;
+}
 
-//找到结点的父结点
+//找到结点的家长结点
+int findparent(treenode t[],int length,int x){
+    if(x==1)return -1;
+    int parent=x/2;
+    if(isempty(t,length,parent))return -1;
+    return parent;
+}
+```
+
+```c++
+//数组实现二叉树（下标从0开始）
+
+//定义树结点
+struct treenode{
+	int data;
+	bool empty;
+};
+//初始化
+void init(treenode t[],int length){
+	for(int i= 0;i<length;i++)
+		t[i].empty=true;
+}
+int main(){
+	treenode t[100];
+	init(t,100);
+    return 0;
+}
+//判空
+bool isempty(treenode t[],int length,int x){
+	if(x<0 || x>=length) return true;
+	return t[x].empty;
+}
+//寻找家长节点
+int findparent(treenode t[],int length,int x){
+	if(x==0)return -1;
+	int parent=(x-1)>>1;
+	if(isempty(t,length,parent))return -1;
+	return parent;
+}
+//寻找左孩子
+int findlkid(treenode t[],int length,int x){
+	int lkid = x*2+1;
+	if(isempty(t,length,lkid))return -1;
+	return lkid;
+}
+
+//寻找右孩子
+int findrkid(treenode t[],int length,int x){
+	int rkid=x*2+2;
+	if(isempty(t,length,rkid))return -1;
+	return rkid;
+}
+```
+
+
+
+### 二叉树的先中后序遍历
+
+#### 先序遍历
+
+```c++
+void visitnode(treenode &x);
+void preorder(treenode t[],int length,int x){
+        if(hisempty(t,lengt,x))return;   
+            visitnode(t[x]);
+            preorder(t,length,getlkid(t,length,x));
+            preorder(t,length,getrkid(t,length,x));
+}
+```
+
+
+
+#### 中序遍历
+
+```c++
+void visitnode(treenode &x);
+void inorder(treenode t[],int length,int x){
+    if(isempty(t,length,x)) return;
+    inorder(t,length,getlkid(t,length,x));
+    visitnode(t[x]);
+    inorder(t,length,getrkid(t,length,x));
+}
+```
+
+
+
+#### 后序遍历
+
+```c++
+void visitnode(treenode &x);
+void postorder(treenode t[],int length,int x){
+  if(isempty(t,length,x)) return;
+  postorder(t,length,getlkid(t,length,x));
+  postorder(t,length,getrkid(t,length,x));
+  visitnode(t[x]);
+}
+```
+
+### 树的存储结构
+
+#### 双亲表示法
+
+```c++
+//定义树结点
+const int maxsize=100;
+struct ptnode{
+    int data;
+    int parent;
+};
+//定义树
+struct ptree{
+    ptnode nodes[maxsize];
+    int n;
+};
+```
+
+#### 孩子表示法
+
+```c++
+//定义孩子结点
+const int maxsize=100;
+struct kidnode{
+    int index;
+    kidnode *next;
+};
+//定义家长结点
+struct parentnode{
+	int data;
+    kidnoe *firstkid;
+}tree[maxsize];
+```
+
+
+
+#### 孩子兄弟表示法
+
+```c++
+//定义结点
+struct node{
+    int data;
+    node*firstkid,*nextbrother;
+};
+using tree=node*;
 ```
 
