--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -197,7 +197,7 @@ math: true
 
 错题：
 
-## 4.19 
+## 4.19 二叉树
 
 ![](/img/98491962-6cac-4a2a-8b8e-f163481f4389.jpeg)
 
@@ -207,7 +207,7 @@ math: true
 
 
 
-## 4.20
+## 4.20 二叉树
 
 ![](/img/e5531787-fcac-4c71-bc3a-23365783ecc4.png)
 
@@ -217,10 +217,22 @@ math: true
 
 
 
-## 4.21
+## 4.21 二叉树
 
 ![](/img/24fb0c74-22d0-4407-8a31-3239ed2ba14c.png)
 
 ![](/img/a0d56b61-7e77-4c7f-a5ce-0b6aa5210858.png)
 
 错题：
+
+## 4.22 哈夫曼树和指令集
+
+![](/img/2672602f-ec1a-4878-90a4-dcf81f8543df.png)
+
+![](/img/ba1dcf8b-9a98-4021-95b2-08640abde40c.png)
+
+## 4.23 并查集和加法器
+
+![](/img/01fd4b50-e898-4e51-bba8-bb8347278db5.png)
+
+![](/img/cc75831b-5ed7-46e6-81f9-2f6ddd61bb8b.png)
