--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1203,3 +1203,38 @@ struct node{
 using tree=node*;
 ```
 
+### 并查集
+
+```c++
+//定义并查集
+const int N=100;
+int size[N],p[N];
+//初始化并查集
+void init(int size[],int p[],int length){
+    for(int i= 1;i<=length;i++)
+    {
+        size[i]=1;
+        p[i]=i;
+    }
+}
+//查
+int find(int x){
+    if(p[x]!=x) p[x]=find(p[x]);
+    return p[x];
+}
+//并
+void merge(int a,int b){
+    int r1=find(a);
+    int r2=find(b);
+    if(r1==r2)return;
+    if(size[r1]>=size[r2]){
+        p[r2]=r1;
+        size[r1]+=size[r2];
+    }
+    else{
+        p[r1]=r2;
+        size[r2]+=size[r1];
+    }
+}
+```
+
