--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -193,11 +193,15 @@ math: true
 
 ## 4.18 二叉树
 
+![](/img/5cd5f2d1ca234520956211aa717c82f4.png)
+
 ![](/img/d07d18f2-6af3-4a9c-af6b-cff517a6f76c.png)
 
 ![](/img/75982967-5af9-48d6-8198-d614d886442e.png)
 
 错题：
+
+* 无
 
 ## 4.19 二叉树
 
@@ -207,7 +211,7 @@ math: true
 
 错题：
 
-
+* 
 
 ## 4.20 二叉树
 
@@ -217,7 +221,7 @@ math: true
 
 错题：
 
-
+* 
 
 ## 4.21 二叉树
 
@@ -227,14 +231,34 @@ math: true
 
 错题：
 
+* 
+
 ## 4.22 哈夫曼树和指令集
 
 ![](/img/2672602f-ec1a-4878-90a4-dcf81f8543df.png)
 
 ![](/img/ba1dcf8b-9a98-4021-95b2-08640abde40c.png)
 
+错题：
+
+* 
+
 ## 4.23 并查集和加法器
 
 ![](/img/01fd4b50-e898-4e51-bba8-bb8347278db5.png)
 
 ![](/img/cc75831b-5ed7-46e6-81f9-2f6ddd61bb8b.png)
+
+错题：
+
+* 
+
+## 4.24 图和计算机系统概述
+
+![](/img/12a12397-ec18-419b-a8f3-c373e7c48852.png)
+
+![](/img/12a2a5df-c88e-40cd-a067-53bdb95180f0.png)
+
+错题：
+
+* 
