--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -211,7 +211,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 4.20 二叉树
 
@@ -221,7 +221,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 4.21 二叉树
 
@@ -231,7 +231,8 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 注意卡特兰数的适用
 
 ## 4.22 哈夫曼树和指令集
 
@@ -251,7 +252,10 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 注意区分根节点的编号和根节点数组存储的值
+* 2
+  * 功能部件指具体的实现硬件，如加法器本身
 
 ## 4.24 图和计算机系统概述
 
