--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -265,4 +265,36 @@ math: true
 
 错题：
 
+* 无
+
+## 4.25 图和计算机系统概述
+
+![](/img/d33aa3ca-874c-4302-93ef-ae939eceb5e5.jpeg)
+
+![](/img/efddbea4-0c35-4bd6-b9d1-941b6dfedcec.png)
+
+* 
+
+## 4.26 图和数据的运算
+
+![](/img/0277839b-a9e2-43ea-b261-5920d43e45d4.png)
+
+![](/img/58aefcaf-5021-4d0f-a9b8-be7471e315e5.png)
+
+* 
+
+## 4.27 图和数据的运算
+
+![](/img/533496de-70f4-4250-af70-7f7b5dc4c821.png)
+
+![](/img/91d46eb6-6769-4000-88ec-456598232e2f.png)
+
+* 
+
+## 4.28 图和数据的表示
+
+![](/img/77ac18c2-1a7f-4140-9590-a611a86a6e7e.png)
+
+![](/img/b3894525-7447-4d99-9b68-97fa31061c5b.png)
+
 * 
