--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1238,3 +1238,94 @@ void merge(int a,int b){
 }
 ```
 
+## 图的一些代码模板
+
+### 邻接矩阵实现图的顺序存储
+
+```c++
+//定义邻接矩阵
+const int N =100;
+struct graph{
+    int n,e;
+    char vex[N];
+    int weight[N][N];
+};
+```
+
+
+
+### 邻接表实现图的链式存储
+
+```c++
+const int N=100;
+//定义弧结点
+struct arcnode{
+    int adjvex;//弧头结点的编号
+    arcnode*nextarc;//指向下一条边的指针
+    int info;//用来记录边的权值等信息
+};
+//定义顶点结点
+struct vnode{
+    char data;//结点所存储的字母
+    arcnode *firstarc;//结点指向的第一条边
+}
+//定义邻接表
+struct graph{
+    vnode adjlist[N];//顶点结点数组
+    int n,e;//边和顶点的数量
+};
+```
+
+### dijkstra算法的文字过程描述
+
+```c++
+/*
+从顶点x1出发，运行dijkstra算法的过程如下：
+第一轮：顶点x1到x2的最短路径为1→2，距离为a
+第n论：不存在顶点x1到顶点x2的路径，距离为∞
+*/
+```
+
+### bfs算法的文字过程描述
+
+```c++
+    A
+   / \
+  B - C
+  |   |
+  D - E
+       \
+        F
+//图的结构
+/*
+文字描述：用BFS算法求单源最短路径的过程
+初始化：设置一个队列queue，用来存储要访问的结点，以A为起点，起点A入队，visit[A]=1,dist[A]=0
+
+第一轮：队头是A，出队，将A的相邻结点B和C入队，更新dist[B]=1,dist[C]=1,visit[B]=1,visit[C]=1
+
+第二轮：队头是B，出队，将B的相邻未访问节点D入队，dist[D]=2;visit[D]=1
+
+第三轮：队头是C，出队，将C的相邻未访问结点E入队，dist[E]=2；visit[E]=1
+
+第四轮：队头是D，出队，D无相邻未访问节点
+
+第五轮：队头是E，出队，将E的相邻未访问节点F入队，dist[F]=3;visit[F]=1;
+*/
+```
+
+### 拓扑排序的文字过程描述
+
+```c++
+/*
+拓扑排序：
+1、从AOV网中选择任意一个入度为0的点，并将其加入拓扑序列
+2、在AOV网中删除该点和以该点为起点的有向边
+3、重复上述过程直到AOV网为空
+
+逆拓扑排序：
+1、从AOV网中选择任意一个出度为0的点，并将其加入拓扑序列
+2、在AOV网中删除该点和以该点为起点的有向边
+3、重复上述过程直到AOV网为空
+*/
+```
+
