--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -273,6 +273,8 @@ math: true
 
 ![](/img/efddbea4-0c35-4bd6-b9d1-941b6dfedcec.png)
 
+错题：
+
 * 
 
 ## 4.26 图和数据的运算
@@ -280,6 +282,8 @@ math: true
 ![](/img/0277839b-a9e2-43ea-b261-5920d43e45d4.png)
 
 ![](/img/58aefcaf-5021-4d0f-a9b8-be7471e315e5.png)
+
+错题
 
 * 
 
@@ -289,6 +293,8 @@ math: true
 
 ![](/img/91d46eb6-6769-4000-88ec-456598232e2f.png)
 
+错题
+
 * 
 
 ## 4.28 图和数据的表示
@@ -296,5 +302,17 @@ math: true
 ![](/img/77ac18c2-1a7f-4140-9590-a611a86a6e7e.png)
 
 ![](/img/b3894525-7447-4d99-9b68-97fa31061c5b.png)
+
+错题
+
+* 
+
+## 4.29 图和数据的表示
+
+![](/img/dc247e82-def8-4aad-94d2-4d49636f84bf.png)
+
+![](/img/a6dc2b1f-b7d6-41d6-9615-4bdd224d606c.png)
+
+错题：
 
 * 
