--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -5076,20 +5076,22 @@ int prim()
 {
     memset(dist, 0x3f, sizeof dist);//初始化最短距离
 
-    int res = 0;
-    for (int i = 0; i < n; i ++ )//n次迭代
+    int res = 0;//最小生成树的权值之和初始化为0
+    for (int i = 0; i < n; i ++ )//n个节点，n次迭代循环
     {
         int t = -1;//不在集合当中的距离最小点的编号
-        for (int j = 1; j <= n; j ++ )
-            if (!st[j] && (t == -1 || dist[t] > dist[j]))
-                t = j;
+        for (int j = 1; j <= n; j ++ )//从顶点1开始遍历到顶点n
+            if (!st[j] && (t == -1 || dist[t] > dist[j]))/*每次循环加入新的点从要遍历一遍1~n顶点，然后找到离
+最小生成树距离最小的节点，因为最开始t初始化为-1，所以最开始是从
+图中找到任意一个点，然后开始遍历其他n-1个点找到最小的点*/
+                t = j;//注意，t是此时离最小生成树最小的点，而j是图中其他的点，或者说所有还没有在树里面的点
 
-        if (i && dist[t] == INF) return INF;
+        if (i && dist[t] == INF) return INF;//判断图是否连通，如果不是第一次加入的点，并且最近的点t距离是无穷大，也就是说它和前面的点都没有距离，都不连通，说明图不连通。
 
-        if (i) res += dist[t];//只要不是第一个点
-        st[t] = true;
+        if (i) res += dist[t];//第一个点是起点不算距离，从第二个点开始算距离，加入距离最小的点
+        st[t] = true;//标记为已经加入最小生成树
 
-        for (int j = 1; j <= n; j ++ ) dist[j] = min(dist[j], g[t][j]);
+        for (int j = 1; j <= n; j ++ ) dist[j] = min(dist[j], g[t][j]);//i=0的时候最小生成树只加入了0，相当于初始化一遍其他点到0的距离，从i=1也就是第二轮开始，每次从dist[]中找到一个最近的点（最小边加入生成树，然后把这条边的权值加到总权值res当中，然后更新所有其他点到生成树的距离
     }
 
     return res;
