--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -156,7 +156,7 @@ math: true
   * 能够保证相对升序的序列（有可能是跳跃的，也有可能是前面的i+1个
 * 选择类排序：简单选择排序、堆排序
   * 堆排序：（大根堆）每次选择堆顶元素放在最后（和堆底元素交换），每次将最大的元素放在最后面
-    * 第一趟排序是建堆完之后再把它那个最大的元素换到最后面的结果
+    * 第一趟排序是先顺序存进一个二叉树，调整成为一个大根堆，再把它那个最大的元素换到最后面，再次调整为大根堆的结果
   * 每次都有一个元素被放在最终位置
 * 交换类排序：冒泡排序、快速排序
   * 每次根据逆序对进行交换
@@ -1327,5 +1327,39 @@ struct graph{
 2、在AOV网中删除该点和以该点为起点的有向边
 3、重复上述过程直到AOV网为空
 */
+```
+
+### 关键长度的意义
+
+```c++
+/*AOE网的顶点代表时间，带权边代表活动，关键路径的长度代表的是
+一个项目从开始到结束至少需要多长时间
+```
+
+### 朴素版prim算法
+
+```c++
+//
+const int N=1000;
+int n;
+int g[N][N];
+int dist[N];
+bool st[N];
+int prim(){
+    int res=0;
+    memset(dist,0x3f,sizeof(dist));
+    for(int i = 0;i<n;i++){
+        int t=-1;
+        for(int j = 1;j<=n;j++)
+            if(!st[j]&&(t==-1 || dist[t]>dist[j]))
+                t=j;
+        if(i && dist[t]==INF)return INF;
+        if(i) res+=dist[t];
+        st[t]=true;
+        for(int j  = 1;j<=n;j++)
+            dist[j]=min(dist[j],g[t][j]);
+    }
+    return res;
+}
 ```
 
