--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -316,3 +316,33 @@ math: true
 错题：
 
 * 
+
+## 4.30 图和数据的运算
+
+![](/img/32785cc8-c47d-4edb-87dd-a8725957bb8f.png)
+
+![](/img/9879c413-419b-48a0-bb0f-c2c112359bfb.png)
+
+错题：
+
+* 
+
+## 5.1 图和数据的运算
+
+![](/img/d5f7bf61-b6fe-406c-837d-b15928de3619.png)
+
+![](/img/674efba7-0fae-4737-a4d9-44e019865c06.png)
+
+错题：
+
+* 
+
+## 5.2 图和数据的表示
+
+![](/img/a3a1dada-3a73-4324-a7c1-5da7b981bcb7.png)
+
+![]()
+
+错题：
+
+* 
