--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -8,7 +8,7 @@ index_img: /img/1920x1080 (16).jpg
 math: true
 ---
 
-# 如何备考数据结构大题
+## 如何备考数据结构大题
 
 ![](/img/205513.jpg)
 
@@ -22,7 +22,7 @@ math: true
 * 多做题少听课
 * 主动发现自己不足的地方，去查缺补漏而不是遍历课本
 
-## 大题的题型
+### 大题的题型
 
 ![](/img/205610.jpg)
 
@@ -33,44 +33,44 @@ math: true
   * 训练数据结构定义的简单代码
   * 基本操作的简单代码
 
-## 八大考点
+### 八大考点
 
 ![](/img/05710.jpg)
 
-### ①线性表的应用
+#### ①线性表的应用
 
-### ②栈的应用
+#### ②栈的应用
 
-### ③队列的应用
+#### ③队列的应用
 
-### ④数组的应用
+#### ④数组的应用
 
-### ⑤树与二叉树的应用
+#### ⑤树与二叉树的应用
 
 * 二叉树基本考的就是哈夫曼树和哈夫曼编码，并查集及其应用。其他的题型通常是定义数据结构或者实现基本操作
 
-### ⑥图的基本应用
+#### ⑥图的基本应用
 
 * 比较基本的应用
 * 应用题一般不用写代码但是要手算，能够懂这些算法运行的逻辑
 
-#### 最小（代价）生成树
+##### 最小（代价）生成树
 
 * 最小生成树考察的是一个图中包含多个点的总路线代价最短
   * 而单源最短路径只考虑两点之间最短距离的路径
 
-#### 最短路径
+##### 最短路径
 
-#### 拓扑排序
+##### 拓扑排序
 
-#### 关键路径
+##### 关键路径
 
-#### 其他
+##### 其他
 
 * 数据结构定义
 * 画图
 
-### ⑦查找算法的分析及应用
+#### ⑦查找算法的分析及应用
 
 * 二叉搜索树、平衡二叉树和红黑树可能和树与二叉树考点进行比较深度的结合
   * 比如给出一个关键字序列，从一个空的二叉树开始插入这些关键字，然后画出插入以后的平衡二叉树的形态，同时给出这个平衡二叉树的数据结构定义
@@ -87,7 +87,7 @@ math: true
   * 大概率应用题而不是代码
 * 查找算法的性能分析，分析平均查找长度，成功的ASL和失败的ASL
 
-### ⑧排序算法的分析及应用
+#### ⑧排序算法的分析及应用
 
 * 希尔排序
   * 更容易考小题而不是应用题
@@ -95,24 +95,24 @@ math: true
 * 基数排序
 * 外部排序
 
-## 七大考法
+### 七大考法
 
 ![](/img/205729.jpg)
 
-### ①画图作答
+#### ①画图作答
 
 * （1）画数据结构的状态示意图
   * 重中之重
   * 一般是考察比较复杂的数据结构的图示
 
-### ②代码作答
+#### ②代码作答
 
 * （1）写数据结构定义、基本操作代码
   * 简单的代码
   * 基本操作/功能的代码片段，比如判断队空或者插入
   * 比较复杂的数据结构不会考很复杂的算法题，但可能考数据结构的代码定义以及基本操作的代码实现
 
-### ③文字简答
+#### ③文字简答
 
 * （1）手算分析算法运行过程/结果
 * （2）数据结构、算法的选择
@@ -136,13 +136,13 @@ math: true
   * 树和图的性质推演
     * 主要根据王道书的课后小题来复习
 
-# 应用题
+## 应用题
 
 ![](/img/191649.jpg)
 
 * 先找到题目中的线索，然后遍历一下这类问题的做法
 
-## 排序类应用题
+### 排序类应用题
 
 ![](/img/170219.jpg)
 
@@ -165,7 +165,7 @@ math: true
 * 不稳定排序算法的特点
   * 对于一种排序算法，我们要交换前两个位置的时候，如果它看不到前面有一个和他相同的元素，就有可能出现不稳定
 
-## 查找类应用题
+### 查找类应用题
 
 ![](/img/205833.jpg)
 
@@ -182,13 +182,13 @@ math: true
 * 链式存储，考虑二叉搜索树
 * 顺序存储，顺序查找和折半查找（注意排序）比较常见
 
-## 树类应用题
+### 树类应用题
 
-## 图类应用题
+### 图类应用题
 
-## 线性表类应用题
+### 线性表类应用题
 
-# 算法题
+## 算法题
 
 ![](/img/fhiwqiyehfih.png)
 
@@ -208,9 +208,9 @@ math: true
   * 阶段三：少食多餐，增加做题量
   * 阶段四：考前保持手感，再刷历年真题
 
-## 排序
+### 排序
 
-### 顺序表
+#### 顺序表
 
 * 快排和堆排是所有排序算法中效率最高的，但是快排代码简单，堆排代码复杂，所以快排最优
 
@@ -274,7 +274,7 @@ math: true
     * 通常来说，对乱序数组的排序，用归并不如用快排
     * 如果题目中给的是两个有序表，并且需要将两个有序表合并为一个，可以考虑用归并思想
 
-### 链表
+#### 链表
 
 * 不支持随机访问，算法较少
 * 考察偏向于考基本功
@@ -284,13 +284,13 @@ math: true
   * 头插法（可实现原地逆置）
   * 尾插法（保持原序）
 
-## 树
+### 树
 
 * 掌握前中后序遍历、层序遍历、递归算法
   * 非递归算法不用掌握
   * 基于这些算法解决思维导图中列出的问题，然后做一下王道书的剩余算法题
 
-## 图
+### 图
 
 * 数据结构层面
   * 邻接矩阵和邻接表的遍历
@@ -475,9 +475,9 @@ if (hh != tt)
   //出队的顺序就是拓扑序
   ```
 
-## 一休的算法题建议
+### 一休的算法题建议
 
-### 评分细则
+#### 评分细则
 
 * 顺序表、链表注意复杂度
   * 分数差别主要在于时间复杂度
@@ -485,7 +485,7 @@ if (hh != tt)
   * 分数差别主要在于特殊情况是否考虑到
 * 序列就是数组
 
-### 答题技巧
+#### 答题技巧
 
 * 顺序表和链表
 
@@ -793,9 +793,9 @@ int ans(int s[],int n ,int k){
   * 申请了哪些结点
   * 递归的时候有多少层的递归（树的高度，递归的层数）
 
-## 栈、队列的一些代码模板
+### 栈、队列的一些代码模板
 
-### 数组实现栈
+#### 数组实现栈
 
 ```c++
 //数组实现栈
@@ -814,7 +814,7 @@ if(tt==0)
 if(tt==maxsize)
 ```
 
-### 链表实现栈
+#### 链表实现栈
 
 ```c++
 //链表实现栈
@@ -860,7 +860,7 @@ bool pop(listack &s,int &x){
 
 ```
 
-### 双向链表实现栈（栈顶在链尾）
+#### 双向链表实现栈（栈顶在链尾）
 
 ```c++
 //双链表实现栈，栈顶在链尾
@@ -915,7 +915,7 @@ bool pop(stk &s,int &x){
 }
 ```
 
-### 数组实现循环队列
+#### 数组实现循环队列
 
 ```c++
 //数组实现循环队列
@@ -963,7 +963,7 @@ bool outqueue(queue &q,int &x){
 
 ```
 
-### 单链表实现队列
+#### 单链表实现队列
 
 ```c++
 //单链表实现队列
@@ -1018,9 +1018,9 @@ bool outqueue(lq &q,int &x){
 }
 ```
 
-## 树的一些代码模板
+### 树的一些代码模板
 
-### 数组实现二叉树
+#### 数组实现二叉树
 
 ```c++
 //数组实现二叉树(下标从1开始)
@@ -1114,9 +1114,9 @@ int findrkid(treenode t[],int length,int x){
 
 
 
-### 二叉树的先中后序遍历
+#### 二叉树的先中后序遍历
 
-#### 先序遍历
+##### 先序遍历
 
 ```c++
 void visitnode(treenode &x);
@@ -1130,7 +1130,7 @@ void preorder(treenode t[],int length,int x){
 
 
 
-#### 中序遍历
+##### 中序遍历
 
 ```c++
 void visitnode(treenode &x);
@@ -1144,7 +1144,7 @@ void inorder(treenode t[],int length,int x){
 
 
 
-#### 后序遍历
+##### 后序遍历
 
 ```c++
 void visitnode(treenode &x);
@@ -1156,9 +1156,9 @@ void postorder(treenode t[],int length,int x){
 }
 ```
 
-### 树的存储结构
+#### 树的存储结构
 
-#### 双亲表示法
+##### 双亲表示法
 
 ```c++
 //定义树结点
@@ -1174,7 +1174,7 @@ struct ptree{
 };
 ```
 
-#### 孩子表示法
+##### 孩子表示法
 
 ```c++
 //定义孩子结点
@@ -1192,7 +1192,7 @@ struct parentnode{
 
 
 
-#### 孩子兄弟表示法
+##### 孩子兄弟表示法
 
 ```c++
 //定义结点
@@ -1203,7 +1203,7 @@ struct node{
 using tree=node*;
 ```
 
-### 并查集
+#### 并查集
 
 ```c++
 //定义并查集
@@ -1238,9 +1238,9 @@ void merge(int a,int b){
 }
 ```
 
-## 图的一些代码模板
+### 图的一些代码模板
 
-### 邻接矩阵实现图的顺序存储
+#### 邻接矩阵实现图的顺序存储
 
 ```c++
 //定义邻接矩阵
@@ -1254,7 +1254,7 @@ struct graph{
 
 
 
-### 邻接表实现图的链式存储
+#### 邻接表实现图的链式存储
 
 ```c++
 const int N=100;
@@ -1276,7 +1276,7 @@ struct graph{
 };
 ```
 
-### dijkstra算法的文字过程描述
+#### dijkstra算法的文字过程描述
 
 ```c++
 /*
@@ -1286,7 +1286,7 @@ struct graph{
 */
 ```
 
-### bfs算法的文字过程描述
+#### bfs算法的文字过程描述
 
 ```c++
     A
@@ -1313,7 +1313,7 @@ struct graph{
 */
 ```
 
-### 拓扑排序的文字过程描述
+#### 拓扑排序的文字过程描述
 
 ```c++
 /*
@@ -1329,14 +1329,14 @@ struct graph{
 */
 ```
 
-### 关键长度的意义
+#### 关键长度的意义
 
 ```c++
 /*AOE网的顶点代表时间，带权边代表活动，关键路径的长度代表的是
 一个项目从开始到结束至少需要多长时间
 ```
 
-### 朴素版prim算法
+#### 朴素版prim算法
 
 ```c++
 //
@@ -1361,5 +1361,54 @@ int prim(){
     }
     return res;
 }
+```
+
+### 排序的一些代码模板
+
+#### 快速排序
+
+```c++
+void quick_sort(int q[],int l,int r){
+    if(l>=r)return ;
+    int i  =  l-1,j=r+1,x=q[l+r>>1]
+    while(i<j){
+        do i++;while(q[i]<x);
+        do j--;while(q[j]>x);
+        if(i<j)swap(q[i],q[j]);
+    }
+    quick_sort(q,l,j),quick_sort(q,j+1,r);
+}
+```
+
+
+
+#### 归并排序
+
+```c++
+void merge_sort(int q[],int l,int r){
+	if(l>=r)return ;
+    merge_sort(q,l,mid);
+    merge_sort(q,mid+1,r);
+    int k = 0,i = l , j = mid+1;
+    while(i<=mid && j <=r){
+        if(q[i]<=q[j])tmp[k++]=q[i++];
+        else tmp[k++]=q[j++];
+    }
+    while(i<=mid)tmp[k++]=q[i++];
+    while(j<=r)tmp[k++]=q[j++];
+    for(j = 0,i=l;i<=r;i++,j++)
+        q[i]=tmp[j];
+    
+}
+```
+
+
+
+### 查找的一些代码模板
+
+#### 二分查找
+
+```c++
+
 ```
 
