--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -275,7 +275,8 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 如果两个点可以互相到达，则属于同一个强连通分量
 
 ## 4.26 图和数据的运算
 
@@ -285,7 +286,8 @@ math: true
 
 错题
 
-* 
+* 无
+  * 记住这个加法器的图，减法的情况下，两端是减数和被减数的补码，sub控制进位+1
 
 ## 4.27 图和数据的运算
 
@@ -295,7 +297,7 @@ math: true
 
 错题
 
-* 
+* 1
 
 ## 4.28 图和数据的表示
 
@@ -305,7 +307,7 @@ math: true
 
 错题
 
-* 
+* 无
 
 ## 4.29 图和数据的表示
 
@@ -315,7 +317,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 4.30 图和数据的运算
 
@@ -341,8 +343,28 @@ math: true
 
 ![](/img/a3a1dada-3a73-4324-a7c1-5da7b981bcb7.png)
 
-![]()
+![](/img/20250504201845.jpg)
 
 错题：
+
+* 
+
+## 5.3 图的存储和浮点数的表示
+
+![](/img/f88b3f27-fef3-4138-b45d-1ab9318516d4.png)
+
+![](/img/cfda790d-6da5-48d5-bee1-c05bdd635a67.png)
+
+错题
+
+* 
+
+## 5.4 图的存储和数据的运算
+
+![](/img/01f0d836-e4f8-4560-9df0-7608b5bd5a43.png)
+
+![](/img/13e32cfa-d3b7-49d7-9f95-590278a7e137.png)
+
+错题
 
 * 
