--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -144,6 +144,8 @@ math: true
 
 ### 排序类应用题
 
+![](/img/20043.jpg)
+
 ![](/img/170219.jpg)
 
 ![](/img/171218.jpg)
@@ -210,11 +212,17 @@ math: true
 
 ### 排序
 
+![](/img/20043.jpg)
+
 #### 顺序表
 
 * 快排和堆排是所有排序算法中效率最高的，但是快排代码简单，堆排代码复杂，所以快排最优
 
 * 考试按照时间复杂度给分
+
+  * 通常来说，408算法题不会限制具体使用哪种算法
+  * 408算法题通常按照复杂度给分，复杂度越低，给分越高
+  * 若题目没有特别要求，答题时回答“平均复杂度”即可
 
 * 套路型算法：
 
