--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -327,7 +327,9 @@ math: true
 
 错题：
 
-* 
+* 2
+  * 能用表示范围判断就用表示范围判断
+  * 不好转真值的时候才用标志位判断
 
 ## 5.1 图和数据的运算
 
@@ -337,7 +339,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 5.2 图和数据的表示
 
@@ -347,7 +349,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 5.3 图的存储和浮点数的表示
 
@@ -357,7 +359,7 @@ math: true
 
 错题
 
-* 
+* 无
 
 ## 5.4 图的存储和数据的运算
 
@@ -367,4 +369,4 @@ math: true
 
 错题
 
-* 
+* 无
