--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -370,3 +370,23 @@ math: true
 错题
 
 * 无
+
+## 5.5 图和数据的运算
+
+![](/img/5b125a97-0bcc-4c28-894c-c01fc9669e11.png)
+
+![](/img/20250506181134.jpg)
+
+错题：
+
+* 
+
+## 5.6 图和浮点数的表示
+
+![](/img/bef4331d-e787-4912-8e7f-6db7fb31209d.png)
+
+![](/img/20250506181141.jpg)
+
+错题：
+
+* 
