--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1418,3 +1418,191 @@ void merge_sort(int q[],int l,int r){
 
 ```
 
+## 错题本
+
+### 2010 线性表
+
+![](F:\try\home\themes\fluid\source\img\194921.jpg)
+
+```c++
+//自己的
+void moveleft(int q[],int p,int n){
+    int tmp[n];
+    for(int i = 0;i<n;i++)
+        tmp[(i+n-p)%n]=q[i];
+    for(int i = 0 ;i<n;i++)
+        q[i]=tmp[i];
+    
+    
+}
+```
+
+```c++
+//标答
+void reverse(int q[],int l,int r){
+    if(l>=r)return;
+    while(l<r){
+        swap(q[l],q[r]);
+        l++,r--;
+    }
+}
+void moveleft(int q[],int n,int p){
+    reverse(q,0,p-1);
+    reverse(q,p,n-1);
+    reverse(q,0,n-1);
+}
+```
+
+### 2011 线性表
+
+```c++
+//自己的
+/*算法的基本设计思想：
+中位数的位置是可以计算出的，也就是两个数列合并后处于L/2位置的数，利用两个指针ij分别指向数组A,B，然后找到第L/2大的数即中位数*/
+int findmid(int a[],int b[],int l){
+    int i = 0,j=0;
+    while(i+j<l-1){
+        if(a[i]>=b[j])j++;
+        else i++;
+    }
+    return min(a[i],b[j]);
+}
+```
+
+```c++
+//标答
+int findMid(int a[], int b[], int n) {
+    int l = 0, r = n;
+    while (l < r) {
+        int i = (l + r) / 2;
+        int j = n - i;
+        if (i < n && b[j - 1] > a[i]) l = i + 1;
+        else if (i > 0 && a[i - 1] > b[j]) r = i - 1;
+        else {
+            int leftMax = 0;
+            if (i == 0) leftMax = b[j - 1];
+            else if (j == 0) leftMax = a[i - 1];
+            else leftMax = std::max(a[i - 1], b[j - 1]);
+            return leftMax;
+        }
+    }
+
+    int i = l, j = n - l;
+    if (i == 0) return b[j - 1];
+    if (j == 0) return a[i - 1];
+    return std::max(a[i - 1], b[j - 1]);
+}
+```
+
+### 2013 线性表
+
+```c++
+//自己的
+//设计思想：如果一个数的出现次数大于n/2，那么他一定是这一组数顺序序列的中位数，然后找到比它小的第一个数和比他大的第一个数，两者的位置差就是该数出现的次数。
+void quick_sort(int q[],int l,int r){
+    if(l>=r)return ;
+    int x=q[l+r>>1],i=l-1,j=r+1;
+    while(i<j){
+        do i++;while(q[i]<x);
+        do j--;while(q[j]>x);
+        if(i<j)swap(q[i],q[j]);
+    }
+    quick_sort(q,l,j),quick_sort(q,j+1,r);
+}
+int bsl(int l,int r,int x,int q[]){
+    while(l<r){
+        int mid=l+r+1>>1;
+        if(q[mid]<x)l=mid;
+        else r=mid-1;
+    }
+    return l;
+}
+int bsh(int l,int r,int x,int q[]){
+    while(l<r){
+        int mid = l+r>>1;
+        if(q[mid]>x)r=mid;
+        else l  = mid+1;
+    }
+    return l;
+}
+int findmain(int a[],int n){
+    quick_sort(a,0,n-1);
+    int result = a[n-1>>1];
+    int left=bsl(0,n-1,result,a);
+    int right=bsh(0,n-1,result,a);
+    if(right-left-1>(n>>1))return result;
+    else return -1;
+}
+
+```
+
+```c++
+//摩尔投票法，时间复杂度O(n)，空间复杂度O(1)
+int find_main(int a[], int n) {
+    int candidate = -1, count = 0;
+
+    // 第一轮：找出可能的主元素
+    for (int i = 0; i < n; i++) {
+        if (count == 0) {
+            candidate = a[i]; // 换人
+            count = 1;
+        } else if (a[i] == candidate) {
+            count++; // 同类+1
+        } else {
+            count--; // 异类-1
+        }
+    }
+
+    // 第二轮：验证是否真的是主元素（必须超过一半）
+    count = 0;
+    for (int i = 0; i < n; i++) {
+        if (a[i] == candidate) count++;
+    }
+
+    return (count > n / 2) ? candidate : -1;
+}
+```
+
+🎭 这个算法其实是在模拟“投票大战”！
+
+想象你现在有一群人，每人代表一个数。你的目标是找出 **有没有某个数在这群人里占多数（超过一半）**。
+
+------
+
+🥊 摩尔投票的逻辑是：
+
+- 你一开始不知道谁是主角，所以从第一个人开始猜；
+- 如果后来遇到和当前猜测一样的人（站你这边），你就信心 +1；
+- 如果遇到和你猜的不一样的人（反对你），你就信心 -1；
+- 如果信心掉到 0，就说明你现在这个候选人支持和反对打平了，需要换人重新开始；
+- 最后剩下来的“赢家”有可能是主角，但得再数一遍确认一下它是不是真的超过一半。
+
+------
+
+🎯 那为什么 `count--` 是必要的？
+
+因为每遇到一个“不同”的数，就是“主元素”的一个反对票。
+
+如果主元素真的超过一半，那其他所有数都不够把它抵消掉，它一定能撑到最后！
+
+比如数组：
+
+```
+csharp
+
+
+复制编辑
+[5, 5, 3, 5, 7, 5, 5, 1]
+```
+
+- 主元素是 5，它有 5 票；
+- 剩下的 3、7、1 只有 3 票；
+- 即使这 3 票全都拿来反对 5，**5 还是赢了！**
+
+所以你在每遇到一个“异类”时，**就等于主角被反对了一次，要 `count--`**。
+
+------
+
+✅ 总结一句话：
+
+> `count--` 是为了让反对的声音抵消掉主元素的票数，看它能不能最终剩下来。
