--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -390,3 +390,24 @@ math: true
 错题：
 
 * 2
+
+## 5.7 图和浮点数的运算
+
+![](/img/995782ef-37c9-4eb9-87c4-00a5231cce07.png)
+
+![](/img/2ddd36f2-28ca-41cb-bf3d-4835ff9019e6.png)
+
+错题：
+
+* 
+
+## 5.8 图和浮点数的表示
+
+![](/img/06028951-0d3c-40ec-8320-b9441a8895a8.png)
+
+![](/img/2a21e041-0a79-46aa-9f1a-06f11c1e8e9f.png)
+
+错题：
+
+* 
+
