--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1420,7 +1420,7 @@ void merge_sort(int q[],int l,int r){
 
 ## 错题本
 
-### 2010 线性表
+### 2010 线性表 三次翻转
 
 ![](F:\try\home\themes\fluid\source\img\194921.jpg)
 
@@ -1451,9 +1451,10 @@ void moveleft(int q[],int n,int p){
     reverse(q,p,n-1);
     reverse(q,0,n-1);
 }
+
 ```
 
-### 2011 线性表
+### 2011 线性表 二分搜索
 
 ```c++
 //自己的
@@ -1467,6 +1468,7 @@ int findmid(int a[],int b[],int l){
     }
     return min(a[i],b[j]);
 }
+//14分
 ```
 
 ```c++
@@ -1492,9 +1494,10 @@ int findMid(int a[], int b[], int n) {
     if (j == 0) return a[i - 1];
     return std::max(a[i - 1], b[j - 1]);
 }
+//15分
 ```
 
-### 2013 线性表
+### 2013 线性表 摩尔投票法
 
 ```c++
 //自己的
@@ -1606,3 +1609,78 @@ csharp
 ✅ 总结一句话：
 
 > `count--` 是为了让反对的声音抵消掉主元素的票数，看它能不能最终剩下来。
+
+### 2018 线性表 原地哈希法
+
+```c++
+//自己的
+//设计思路：将数组变为有序数组，从最小的正整数1开始判断数组中是否出现，然后递增找到最小的未出现正整数
+void quick_sort(int a[],int l,int r){
+    if(l>=r)return;
+    int x=a[l+r>>1],i=l-1,j=r+1;
+    while(i<j){
+        do i++ ;while(a[i]<x);
+        do j--;while(a[j]>x);
+        if(i<j)swap(a[i],a[j]);
+    }
+    quick_sort(a,l,j),quick_sort(a,j+1,r);
+}
+int findmin(int a[],int n){
+    int mini = 1;
+    quick_sort(a,0,n-1);
+    for(int i = 0 ; i<n;i++){
+        if(a[i]==mini) mini++;
+    }
+    return mini;
+}
+//时间复杂度O(nlogn)空间复杂度O(logn)
+
+```
+
+```c++
+//课本上的答案 时间复杂度O(n),空间复杂度O(n)
+int findmin(int a[],int n){
+    int tmp[n];
+    memset(tmp,0,sizeof(tmp));
+    for(int i = 0;i<n;i++){
+        if(a[i]>0&&a[i]<=n)tmp[a[i]-1]=1;
+
+    }
+    for(int i = 0;i<n;i++)
+        if(!tmp[i])return i+1;
+}
+```
+
+```c++
+//更好的答案（原地哈希法）时间复杂度O(n)，空间复杂度O(1)
+int findmin(int a[],int n){
+    for(int i = 0 ;i<n;i++)
+        while(a[i]>0 && a[i]<=n &&a[a[i]-1]!=a[i])
+          swap(a[a[i]-1],a[i]);
+    for(int i = 0;i<n;i++)
+        if(a[i]!=i+1)return i+1;
+}
+```
+
+### 2020 线性表
+
+```c++
+//答案
+const int maxint = 0x3f3f3f3f
+bool ismin(int a,int b,int c){
+    return a<=b&&a<=c;
+}
+int distance(int a[],int n1,int b[],int n2,int c[],int n3){
+    int i = 0 ,j=0,k = 0,dmin = maxint;
+     	while(i<n1  && j<n2&& k <n3 &&d>0){
+            int d = abs(a[i]-b[j])+abs(a[i]-c[k])+abs(b[j]-c[k]);
+            if(d<dmin) dmin=d;
+            if(ismin(a[i],b[j],c[k]))i++;
+            else if(b[j],a[i],c[k]) j++;
+            else k++;
+        }
+    return  dmin;
+}
+
+```
+
