--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -411,3 +411,82 @@ math: true
 
 * 
 
+## 5.9 图和浮点数的表示
+
+![](/img/a974f49c-c656-4e2c-9fab-d41a267695de.png)
+
+![](/img/c63a73b9-14ac-4ec2-877b-f4804618dae4.png)
+
+错题：
+
+* 
+
+## 5.10
+
+![](/img/d226fca8-a02a-4111-8391-c0e4a067e789.png)
+
+![](/img/31d7023e-f6fb-4cde-9013-a9bd8939fd83.png)
+
+错题：
+
+* 
+
+## 5.11 图和数据类型转换
+
+![](/img/0fcb14c4-0c94-4389-9cd4-4c312d594eb4.png)
+
+![](/img/7a524f2a-1781-4bdb-8280-174c6e68592b.png)
+
+错题：
+
+* 
+
+## 5.12 图和数据类型转换
+
+![](/img/46413e29-3895-42e5-af48-71b50ee4894a.png)
+
+![](/img/bc213a77-a3a7-4b86-8f4a-51fdd141fca9.png)
+
+错题：
+
+* 
+
+## 5.13 图和边界对齐
+
+![](/img/feb8c39c-f1fd-492f-a15b-37fe8157a662.png)
+
+![](/img/20250516143414.png)
+
+错题：
+
+* 
+
+## 5.14 图和数据类型转换
+
+![](/img/9dd7ce12-20c0-4ccc-bda9-03bb4dbdd7f0.jpeg)
+
+![](/img/50516143907.jpg)
+
+错题：
+
+* 
+
+## 5.15 图和数据的存储
+
+![](/img/01863edf-fcbe-40a8-8378-42a3f891bcdf.png)
+
+![](/img/0516143912.png)
+
+错题：
+
+* 
+
+## 5.16 查找和浮点数的表示
+
+![](/img/39281286-2d01-4604-a26d-bb9f8e102dda.png)
+
+![](/img/4d37478e-e97e-4ad6-aa7d-aa021419a36f.png)
+
+错题：
+
+* 
