--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1684,3 +1684,426 @@ int distance(int a[],int n1,int b[],int n2,int c[],int n3){
 
 ```
 
+### 2009 单链表
+
+```c++
+//自己的
+#include <iostream>
+using namespace std;
+struct lnode{
+    int data;
+    lnode *next;
+};
+using linklist = lnode*;
+int getlength(lnode* head){
+    int length=0;
+    lnode *p=head->next;
+    while(p){
+        length++;
+        p=p->next;
+    }
+    return length;
+}
+int findnum(lnode *head,int k){
+        int length=getlength(head);
+        int n=length-k+1;
+        lnode *p=head->next;
+        for(int i = 1;i<n;i++){
+                p=p->next;
+                if(!p)return 0;
+        }
+        cout<<p->data<<endl;
+        return 1;
+}
+    //描述算法的基本设计思想：第一遍顺序查找遍历一遍链表，获取链表长度，然后计算倒数k个位置对应的是正数第n-k+1个位置，第二遍顺序查找到第n-k+1个节点，如果存在，输出对应的值并返回1，如果不存在则返回0
+```
+
+```c++
+//答案的
+/*思路
+1)算法的基本设计思想：
+问题的关键是设计一个尽可能高效的算法，通过链表的一次遍历，找到倒数第k个结点的位置。定义两个指针变量p和q,初始时均指向头结点的下一个结点(链表的第一个结点),p指针沿链表移动；当p指针移动到第k个结点时，q指针开始与p指针同步移动；当p指针移动到最后一个结点时，q指针所指示结点为倒数第k个结点。以上过程对链表仅进行一遍扫描。
+2)算法的详细实现步骤如下：
+1、count=0,p和q指向链表表头结点的下一个结点。
+2、若p为空，转5。
+3、若count等于k,则q指向下一个结点；否则，count=count+1。
+4、p指向下一个结点，转2。
+5、若count等于k,则查找成功，输出该结点的data域的值，返回1;否则，说明k值超过了线性表的长度，查找失败，返回0。算法结束。
+*/
+#include <iostream>
+using namespace std;
+struct lnode
+{
+    int data;
+    lnode *next;
+};
+int findnum(lnode *list,int k){
+    lnode *p=list->next;
+    lnode *q=list->next;
+    int count = k;
+    while(count--){
+        if(p==nullptr)return 0;
+        p=p->next;
+
+    }
+    while(p){
+        p=p->next;
+        q=q->next;
+    }
+    if(q==nullptr) return 0;
+       
+    cout<<q->data<<endl;
+    return 1;
+
+}
+```
+
+### 2012 单链表
+
+```c++
+//自己的
+#include <iostream>
+using namespace std;
+struct lnode
+{
+    char data;
+    lnode *next;
+    bool ispass=0;
+};
+using linklist=lnode *;
+linklist findpoint(lnode *str1,lnode *str2){
+    while(str1){
+        str1->ispass=1;
+        str1=str1->next;    
+    }
+    while(str2){
+        if(!(str2->ispass)){
+            str2->ispass=1;
+            str2=str2->next;
+        }
+        else break;
+    }
+    lnode *p=str2;
+    return p;
+}
+//思路：先遍历一遍str1，标记已经遍历过的节点，然后再遍历一遍str2，当str2遍历到已经标记过的节点，说明其是二者共同后缀的起始位置。时间复杂度为O(n)
+
+```
+
+```c++
+//答案
+#include <iostream>
+using namespace std;
+struct node
+{
+    char data;
+    node *next;
+};
+int listlen(node *head){
+    int len=0;
+    while(head->next!=nullptr){
+        len++;
+        head=head->next;
+    }
+    return len;
+}
+//找出共同后缀的起始地址
+node * findlist(node *str1,node *str2){
+    int m,n;
+    node *p,*q;
+    m=listlen(str1);
+    n=listlen(str2);
+    for(p=str1;m>n;m--)p=p->next;
+    for(q=str2;m<n;n--)q=q->next;
+    while (p->next!=nullptr&&p->next!=q->next)
+    {
+        p=p->next;
+        q=q->next;
+    }
+    return p->next;
+}
+```
+
+顺序遍历两个链表到尾结点时，并不能保证两个链表同时到达尾结点。这是因为两个链表的长度不同。假设一个链表比另一个链表长k个结点，我们先在长链表上遍历k个结点，之后同步遍历两个链表，这样就能够保证它们同时到达最后一个结点。因为两个链表从第一个公共结点到链表的尾结点都是重合的，所以它们肯定同时到达第一个公共结点。
+1)算法的基本设计思想：
+①分别求出str1和str2所指的两个链表的长度m和n。
+②将两个链表以表尾对齐：令指针p、q分别指向str1和str2的头结点，若m≥n,则指针p先走，使p指向链表中的第m-n+1个结点；若m<n,则使q指向链表中的第n-m+1个结点，即使指针p和q所指的结点到表尾的长度相等。
+③反复将指针p和q同步向后移动，并判断它们是否指向同一结点。当p、q指向同一结点，则该点即所求的共同后缀的起始位置。
+
+### 2015 单链表
+
+```c++
+//自己的
+#include <iostream>
+#include <cmath>
+#include <cstring>
+using namespace std;
+struct node
+{
+    int data;
+    node*link;  
+};
+void delnode(node *p){//删除该节点的下一个节点
+        node *q=p->link;
+        p->link=q->link;
+        free(q);
+}
+void nosame(node *head,int m,int n){
+    bool ispass[n+1];
+    memset(ispass,0,sizeof(ispass));
+    node *p=head->link;
+    while (p)//同时保存两个点，一个是当前节点的上一个节点即head所指向的，一个是当前节点即p
+    {
+        if(!(ispass[abs(p->data)])){
+            ispass[abs(p->data)]=1;
+            p=p->link;
+            head=head->link;
+        }
+        else{
+            delnode(head);
+            p=head->link;
+        }
+    }
+    
+}
+/*思路：用一个bool数组记录某个数曾经出现过，
+如果遍历到某个点的时候发现他的绝对值出现过，则删除该点。时间复杂度为O(m)*/
+```
+
+```c++
+//答案
+同样
+```
+
+### 2019 单链表 快慢指针找链表中点
+
+```c++
+//自己的
+#include <iostream>
+#include <cmath>
+#include <cstring>
+using namespace std;
+
+
+/*
+思路：根据题目可知，会被插入的节点有n-1/2（下取整）个，即从n-(n-1/2)后面都是要插入前面序列的节点
+从该点开始对后面的采用头插法二次插入，形成一个后部逆序，然后从头开始隔次插入，即可得到题目要求的结果
+*/
+struct node
+{
+    int data;
+    node *next;
+};
+int getlength(node *head){
+    node *p=head->next;
+    int length=0;
+    while(p){
+        length++;
+        p=p->next;
+    }
+    return length;
+}
+
+void insertlist(node *head){
+    int n=getlength(head);
+    int k = n-(n-1>>1);
+    node *h=head->next;
+    for(int i = 1;i<k;i++){
+            h=h->next;//跳出循环后p指向的是第k个节点，也就是不需要倒插的最后一个节点,相当于倒置链表的头结点
+    }
+    int m = n-1>>1;
+    node *p=h->next;
+    node *tmp=p->next;
+    p->next=nullptr;
+    p=tmp;
+    //从第一个点开始头插，用一个指针保存剩下的链表的开头
+    for(int i = 1;i<=m;i++){
+        node *tmp=p->next;//剩下待插入的链表的起点
+        p->next=h->next;
+        h->next=p;
+        p=tmp;     
+    }//形成倒插序列
+    node *p=h->next;
+        node *q=head->next;
+        int count= n;
+        node *rear=head;
+    while (count)
+    {//n个数重组
+       //顺序链表取数
+       node *tmp=q->next;
+       rear->next=q;
+       rear=q;
+       q=tmp;
+       count--;
+       //逆序链表取数
+        node *tmp=p->next;
+        rear->next=p;
+        rear=p;
+        p=tmp;
+        count--;
+    }
+    rear->next=nullptr;
+}
+```
+
+```c++
+//答案
+#include <iostream>
+#include <cmath>
+#include <cstring>
+using namespace std;
+
+
+/*
+思路：根据题目可知，会被插入的节点有n-1/2（下取整）个，即从n-(n-1/2)后面都是要插入前面序列的节点
+从该点开始对后面的采用头插法二次插入，形成一个后部逆序，然后从头开始隔次插入，即可得到题目要求的结果
+*/
+struct node
+{
+    int data;
+    node *next;
+};
+void changelist(node *h){
+    node *p,*q,*r,*s;
+    p=q=h;
+    while (q->next!=nullptr)//寻找中间节点
+    {
+        p=p->next;
+        q=q->next;
+        if(q->next!=nullptr) q=q->next;
+    }
+    q=p->next;//p所指节点为中间节点，q为后半段链表的首节点
+    p->next=nullptr;//p为中间节点，将中间节点指向的节点变为nullptr
+    while (q!=nullptr)
+    {
+        //将链表后半段逆置,p(中间节点)充当了头结点的地位，q成为了待插入链表的起点
+        r=q->next;//r用来存储下一个要插入的节点
+        q->next=p->next;//头插法，q指向原头结点指向的节点
+        p->next=q;//q成为头结点指向的节点
+        q=r;//q成为下一个要插入的节点
+    }
+    s=h->next;//s指向前半段的第一个数据节点，即插入点
+    q=p->next;//q指向后半段的第一个数据节点
+    p->next=nullptr;//p要成为链表的
+    while (q!=nullptr)//将链表后半段的节点插入到指定位置
+    {
+        r=q->next;//r指向后半段的下一个节点
+        q->next=s->next;//将q所直接点插入到s所指结点之后
+        s->next=q;
+        s=q->next;//s指向前半段的下一个插入点
+        q=r;//q变为后半段要插入的点
+    }
+    
+
+    
+}
+```
+
+你问：“为什么快指针 q 走两步，慢指针 p 走一步，最后 q 到达链尾时 p 正好在链表中间？”
+
+这个其实是**快慢指针（龟兔赛跑）找链表中点的经典原理**，我给你详细解释一下：
+
+---
+
+原理说明
+
+* 设链表长度为 n。
+* 慢指针 p 每次走一步，快指针 q每次走两步。
+* 当快指针 q 到达链表末尾（或越过末尾）时，慢指针 p 所指节点就是链表的中点。
+
+---
+
+为什么成立？
+
+* 由于 q速度是 p的两倍，假设 p走了 k 步，那么 q走了 $2k$ 步。
+
+* 当 q 到链尾时，链表总长度是 n，因此：
+
+  $$
+  2k \approx n \implies k \approx \frac{n}{2}
+  $$
+
+* 即慢指针 p 走了链表长度一半的步数，停在中点。
+
+---
+
+直观示例
+
+| 链表长度 | q走的步数 | p 走的步数 | p 位置            |
+| -------- | --------- | ---------- | ----------------- |
+| 5        | 4\~5      | 2\~3       | 第3个节点（中间） |
+| 6        | 6         | 3          | 第4个节点（中间） |
+
+---
+
+代码示例
+
+```cpp
+node* findMiddle(node* head) {
+    node* p = head;
+    node* q = head;
+    while (q != nullptr && q->next != nullptr) {
+        p = p->next;
+        q = q->next->next;
+    }
+    return p; // p 指向中点
+}
+```
+
+---
+
+总结
+
+* 快指针两步，慢指针一步。
+* 快指针到末尾时，慢指针刚好走一半，指向中点。
+* 这是链表中点查找的最常用技巧。
+
+---
+
+形象文字图
+
+```
+less复制编辑节点： 1 → 2 → 3 → 4 → 5 → 6 → 7 → nullptr
+
+p:        ↑     ↑     ↑     ↑
+         1     2     3     4
+
+q:        ↑           ↑           ↑
+         1           3           5           7
+```
+
+- 每次循环，p向右走一个节点，q向右走两个节点。
+- 当q到达链尾或超出链尾时，p所在的位置就是中点。
+
+### 2022 二叉搜索树
+
+```c++
+//自己的
+#include <iostream>
+using namespace std;
+/*
+思路：遍历数组的每个点，判断各点是否符合二叉搜索树的情况，时间复杂度为O(n)
+*/
+const int max_size =10000;
+struct sqbitree{
+    int sqbitnode[max_size];
+    int Elenum;
+};
+bool isbst(sqbitree a){
+        int n = a.Elenum;
+        for(int i = 0;i<n;i++){
+            int x=a.sqbitnode[i];
+            int lk=a.sqbitnode[i*2+1];
+            int rk=a.sqbitnode[i*2+2];
+            if(x==-1)continue;
+            if(x>=lk &&x<=rk)continue;
+            else return false;
+        }
+        return true;
+}
+```
+
+```c++
+//答案
+```
+
