--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -490,3 +490,35 @@ math: true
 错题：
 
 * 
+
+## 5.17 二叉树和存储系统
+
+![](F:\try\home\themes\fluid\source\img\41b8a713-aea9-4a89-b02c-f3e12daa1473.png)
+
+![](F:\try\home\themes\fluid\source\img\1834437f-50ab-47cb-866b-e66793ed5d4a.png)
+
+* 
+
+## 5.18
+
+![](/img/d489cc47-084f-40c7-a1b8-240025d9ca9f.png)
+
+![]()
+
+* 
+
+## 5.19
+
+![]()
+
+![](/img/3fe35dd7-6dfb-48fd-9c9f-df405b0f15f3.png)
+
+* 
+
+## 5.20
+
+![]()
+
+![]()
+
+* 
