--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2107,3 +2107,211 @@ bool isbst(sqbitree a){
 //答案
 ```
 
+### 2023 邻接矩阵
+
+```c++
+//我的
+#include <iostream>
+#include <cstring>
+using namespace std;
+const int MAXV=1000;
+struct MGraph
+{
+    int numVertices,numEdges;
+    char VerticesList[MAXV];
+    int Edge[MAXV][MAXV];
+};
+/*
+思路：遍历邻接矩阵，当Edge[a][b]有值的时候说明存在一条a->b的边，也就是a的出度+1，b的入度+1，
+遍历完整个邻接矩阵后即可得到所有点的入度和出度，时间复杂度为O(V²)
+*/
+
+int printVertices(MGraph G){
+    int n = G.numVertices;//点的数量
+    int m = G.numEdges;//边的数量
+    int innum[n];//记录每个顶点的入度
+    int outnum[n];//记录每个顶点的出度
+    memset(innum,0,sizeof(innum));
+    memset(outnum,0,sizeof(outnum));
+    for(int i = 0;i<n;i++){
+        for(int j = 0 ;j<n;j++)
+          {
+            if(m<=0) break;//剪枝
+            if(G.Edge[i][j]) {
+                innum[j]++;//j为终点，入度+1
+                outnum[i]++;//i为起点，出度+1
+                m--;//遍历完一条边
+            } 
+          }
+    }
+    int count=0;
+    for(int i= 0;i<n;i++){
+        if(outnum[i]>innum[i]){
+            cout<<char(i+97);
+            count++;
+        }
+    }
+    return count;
+}
+```
+
+### 2021 邻接矩阵
+
+```c++
+//自己的
+#include <iostream>
+#include <cstring>
+#define INF 0x3f3f3f3f
+using namespace std;
+const int MAXV=1000;
+struct MGraph
+{
+    int numVertices,numEdges;
+    char VerticesList[MAXV];
+    int Edge[MAXV][MAXV];
+};
+/*
+思路：不大于2的偶数，即0或者2，我们可以遍历整个数组，计算每个顶点的度，然后再遍历一遍存储度的数组，
+当度为奇数的顶点个数超过2就return 0，如果最后结果是2或者0就break；同时由于是无向图，数组为对称矩阵，
+可以采用压缩存储的思路减少遍历的数组元素
+时间复杂度O(v²)空间复杂度O(V);
+*/
+int IsExistEL(MGraph G){//假设不存在
+        int n = G.numVertices,m=G.numEdges;//用n存储顶点数，m存储边数
+        int dexnum[n];
+        memset(dexnum,0,sizeof dexnum);
+        for(int i = 0;i<n;i++){
+            for(int j = 0 ;j<i+1;j++){
+                if(m == 0) break;
+                if(G.Edge[i][j] && G.Edge[i][j]!=INF) {
+                    dexnum[i]++;
+                    dexnum[j]++;
+                    m--;
+                }
+            }
+        }
+        int count = 0;
+        for(int i = 0;i<n;i++){
+                if(count >2) return 0;
+                if(dexnum[i]%2) count++;
+        }
+        if(count ==0 || count == 2)return 1;
+        else return 0;
+        
+}
+
+```
+
+```c++
+//答案
+#include <iostream>
+#include <cstring>
+#define INF 0x3f3f3f3f
+using namespace std;
+const int MAXV=1000;
+struct MGraph
+{
+    int numVertices,numEdges;
+    char VerticesList[MAXV];
+    int Edge[MAXV][MAXV];
+};
+int IsExistEL(MGraph G){//假设不存在
+        int degree;
+        int count = 0;
+        for(int i = 0;i<G.numVertices;i++){
+            degree =0;
+            for(int j = 0;j<G.numVertices;j++)
+                degree+=G.Edge[i][j];
+            if(degree%2) count ++;
+        }
+        if(count==0 ||count==2)return 1;
+        else return 0;
+        
+}
+
+```
+
+### 2024 拓扑序列
+
+```c++
+//自己的
+时间复杂度O(n²)空间复杂度O(1)
+#include <iostream>
+#include <cstring>
+using namespace std;
+const int MAXV=1000;
+struct MGraph
+{
+    int numVertices,numEdges;//图的顶点数和有向边数
+    char VerticesList  [MAXV];//顶点表
+    int Edge[MAXV][MAXV];//邻接矩阵，无权图
+};
+/*
+思路：拓扑序列唯一，说明每次可以加入拓扑序列的入度为0的点是唯一的，然后同时说明拓扑序列存在，
+因此只需要判断每次入度为0的点是否唯一，且当入度为0的点为0的时候，是否还有顶点没有加入拓扑序列，如果全部加入，
+则存在唯一的拓扑序列
+*/
+int uniquely(MGraph G){
+    int n =G.numVertices;
+    int d[n];//存储每个顶点的入度
+    memset(d,0,sizeof d);
+    for(int j = 0;j<n;j++)//遍历每个顶点
+        for(int i = 0;i<n;i++)//每个顶点和其他顶点是否有入边
+            d[j]+=G.Edge[i][j]; 
+        //找到入度为0的点
+    int hh=-1;
+    for(int k = 0;k<n;k++){//n个点循环n次
+        int dot ;
+        for(int i = 0;i<n;i++){//找到入度为0的点加入拓扑序列
+            if(!d[i])
+            {
+                ++hh;//加入拓扑序列
+                dot = i;
+                d[i]=-1;//从图中删除点i
+            }
+           } 
+            if(hh!=k) return 0;//按理来说一次加入一个入度为0的点，从而拓扑序列唯一，如果加入两个，说明不唯一
+        for(int j = 0;j<n;j++)
+            if(G.Edge[dot][j]) d[j]--;//从图中删除该点为起点的边
+    }
+    if(hh==(n-1)) return 1;//每个点都加入了拓扑序列
+    else return 0;//有点没有加入拓扑序列
+
+
+}
+
+```
+
+### 2016 排序
+
+```c++
+//自己的
+#include <iostream>
+using namespace std;
+/*
+思路：将集合排序，然后将较小的一半当作A1，较大的一般当作A2，即符合题目的要求,时间复杂度O(nlogn)，空间复杂度O(n)
+*/
+void quick_sort(int a[],int l,int r){
+    if(l>=r)return ;
+    int i = l-1,j=r+1;
+    int x = a[l+r>>1];
+    while (i<j)
+    {
+        do i++;while(a[i]<x);
+        do j--;while(a[j]>x);
+        if(i<j)swap(a[i],a[j]);
+    }
+    quick_sort(a,l,j),quick_sort(a,j+1,r);
+    
+}
+void grouping(int n,int a[]){
+        quick_sort(a,0,n-1);
+        int n1=n>>1;//小半边
+        int n2=n-n1;//大半边
+        int a1[n1];//小
+        int a2[n2];//大
+        for(int i = 0;i<n1;i++) a1[i]=a[i];//小
+        for(int i = n1,j=0;i<n;i++,j++)a2[j]=a[i];
+}
+```
+
