--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2315,3 +2315,46 @@ void grouping(int n,int a[]){
 }
 ```
 
+```c++
+//答案
+#include <iostream>
+using namespace std;
+/*
+思路：将集合排序，然后将较小的一半当作A1，较大的一般当作A2，即符合题目的要求,时间复杂度O(nlogn)，空间复杂度O(n)
+*/
+int setPartition(int a[],int n){
+    int pivot,low = 0,low1=0,high=n-1,high1=n-1,flag=1,k=n>>1,i;
+    //枢纽值，第一组的起点和终点，第二组的起点和终点，判断是否退出循环，中间值的位置
+    int s1=0,s2=0;//大小两个组的和
+    while (flag)
+    {
+        pivot=a[low];//第一个值为枢纽
+        while(low<high){//双指针分组
+            while(low<high && a[high]>=pivot) --high;
+            if(low!=high) a[low]=a[high];
+            while(low<high && a[low]<=pivot) ++low;
+            if(low!=high) a[high]=a[low];
+        }
+        a[low]=pivot;//把枢轴值放到正确位置
+        if(low == k-1)//如果数周是第n/2小的位置，划分成功
+            flag =0;
+        else{
+            if(low <k-1)//说明该枢纽值属于较小的一边,继续划分右半部分
+               {
+                 low1=++low;//右半部分从枢轴右端开始（参考二分）
+                high=high1;//右半部分的右端是n
+               }
+            else{//说明枢轴属于较大的一边，继续划分左半部分
+                low = low1;
+                high1=--high;
+            }
+            
+        }
+    }
+    for(int i = 0;i<k;i++)s1+=a[i];
+    for(int i = k;i<n;i++)s2+=a[i];
+    return s2-s1;    
+
+}
+```
+
