--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -399,7 +399,17 @@ math: true
 
 错题：
 
-* 
+* 1
+  * dijkstra算法的流程、操作与prim算法的都很相似，都基于贪心策略。区别在于：
+    * 目的不同
+      * dijkstra算法的目的是构建单源点的最短路径
+      * prim算法的目的是构建最小生成树
+    * 算法思路略有不同
+      * prim算法从一个点开始，每次选择权值最小的边，将其连接到已构建的生成树上，直至所有顶点都已加入
+      * 而dijkstra算法每次找出道远点距离最近且未归入集合的点，并把它归入集合，同时以这个点为基础更新从源点到其他顶点的距离。
+    * 适用的图不同
+      * prim算法只能适用于带权无向图
+      * dijkstra算法可以用于带权有向图或者无向图
 
 ## 5.8 图和浮点数的表示
 
@@ -409,7 +419,7 @@ math: true
 
 错题：
 
-* 
+* 2
 
 ## 5.9 图和浮点数的表示
 
@@ -419,9 +429,10 @@ math: true
 
 错题：
 
-* 
+* 2
+  * float里面有些二进制组合表示特殊状态不表示具体的数，因此比int少
 
-## 5.10
+## 5.10 图和浮点数的表示
 
 ![](/img/d226fca8-a02a-4111-8391-c0e4a067e789.png)
 
@@ -429,7 +440,10 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 上下三角矩阵是指主对角线上下，不包括斜对角线
+* 2
+  * 非规格化浮点数在超出规格化的范围后，非规格化数仍然能参加运算而不是直接当成0处理
 
 ## 5.11 图和数据类型转换
 
@@ -439,9 +453,9 @@ math: true
 
 错题：
 
-* 
+* 无
 
-## 5.12 图和数据类型转换
+## 5.12 图和浮点数的计算与表示
 
 ![](/img/46413e29-3895-42e5-af48-71b50ee4894a.png)
 
@@ -449,7 +463,8 @@ math: true
 
 错题：
 
-* 
+* 2
+  * 对阶
 
 ## 5.13 图和边界对齐
 
@@ -459,7 +474,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 5.14 图和数据类型转换
 
@@ -469,7 +484,8 @@ math: true
 
 错题：
 
-* 
+* 2
+  * 短数向长数转换，只需要记住无符号数和有符号数扩展的规则，边长后的数据类型只决定解释机器数的规则
 
 ## 5.15 图和数据的存储
 
@@ -479,7 +495,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 5.16 查找和浮点数的表示
 
@@ -489,7 +505,7 @@ math: true
 
 错题：
 
-* 
+* 无
 
 ## 5.17 二叉树和存储系统
 
@@ -497,7 +513,12 @@ math: true
 
 ![](/img/1834437f-50ab-47cb-866b-e66793ed5d4a.png)
 
-* 
+错题：
+
+* 1
+  * 二分查找判定树有两种情况	
+    * 每个分支节点要么左右子树结点总数相等，要么左子树比右子树结点总数多一个
+    * 每个分支节点要么左右子树结点总数相等，要么左子树比右子树结点数少一个
 
 ## 5.18 排序和存储系统
 
@@ -505,7 +526,9 @@ math: true
 
 ![](/img/Image_1747746867035.png)
 
-* 
+错题：
+
+* 无
 
 ## 5.19 排序和存储系统
 
@@ -513,12 +536,41 @@ math: true
 
 ![](/img/3fe35dd7-6dfb-48fd-9c9f-df405b0f15f3.png)
 
-* 
+错题：
+
+* 无
 
 ## 5.20 排序和存储系统
 
 ![](/img/Image_1747746890308.png)
 
 ![](/img/Image_1747746894021.png)
+
+错题：
+
+* 1
+  * 给出的是查找顺序而不是二叉排序树的存储
+* 2
+  * 当cache命中的时候，直接从cache中读取送到cpu，不需要进行主存和cpu之间的数据交换
+  * 而当cache确实的时候，需要从主存中读取数据送入cpu并且写入cache
+  * 题目考察的就是cache缺失后cpu和主存进行交换所需要的时间。
+
+## 5.21 平衡二叉树和存储系统
+
+![](/img/20250522173931.png)
+
+![](/img/20250522173935.png)
+
+错题：
+
+* 
+
+## 5.22 平衡二叉树和存储系统
+
+![](/img/20250522173938.png)
+
+![](/img/20250522173940.png)
+
+错题：
 
 * 
